Bootstrap the protobuf compiler